2003-11-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-generate-colon-keywords-file): Preset
	`:strike-through' which is not supported by the old cus-face.el.

2003-11-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-popup-buffer): Reuse an existing window or frame if
	it exists; set the value for `w3m-initial-frame' properly; raise,
	select and focus the new frame.
	(TopLevel): Make `select-frame-set-input-focus' unbound if it is a
	dummy.
	(w3m-view-this-url-1): Show a progress message.
	(w3m-copy-buffer): Simplify the code to call `w3m-popup-buffer'.
	(w3m-alive-p): Add an optional arg `visible' (see docs); use
	inlining `w3m-list-buffers'.
	(w3m): Simplify the code using `w3m-popup-buffer'; specify the
	optional arg to `w3m-alive-p'; protect against the case of no url.
	(w3m-select-buffer-copy-buffer): Bind `w3m-pop-up-windows' to nil.

	* w3m-util.el (w3m-list-buffers): Make it into a normal function;
	don't call itself recursively.

2003-11-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/mew-shimbun.el (static-if): New macro providing only
	when compiling.
	(mew-shimbun-visit-folder): Replace `w3m-static-if' with
	`static-if'.
	(function-max-args): New macro providing only when compiling with
	Emacs; make it work also with symbol function aliases.
	(mew-shimbun-goto-folder): Replace `w3m-function-max-args' with
	`function-max-args'.
	(mew-shimbun-retrieve-article): Replace `w3m-static-if' with
	`static-if'.
	(mew-shimbun-scan-message): Ditto.

	* w3m-util.el (w3m-function-max-args): Move to mew-shimbun.el.

	* w3m.el (w3m-popup-buffer): New function (it still needs to
	improved in order for the `w3m' function to use).
	(w3m-view-this-url-1): Specify the value of
	`w3m-view-this-url-new-session-in-background' to the 3rd arg of
	`w3m-copy-buffer'; don't pop up a window or a frame there.
	(w3m-copy-buffer): Change the meaning of the 3rd arg (see docs);
	don't pop up a window or a frame if it is non-nil, otherwise call