@@ -721,9 +721,10 @@ run-time.  The file name is specified by `w3mhack-colon-keywords-file'."
 	 (dirs '("./" "./shimbun/"))
 	 ;; This program ignores the `defface' form since the custom package
 	 ;; supports all the colon keywords used for the face attributes.
-	 ;; However, there is one exception which is not available in the old
-	 ;; custom package:
-	 (keywords '(:strike-through))
+	 ;; However, there is one exception `:strike-through' which is not
+	 ;; available in the old custom package (`:strikethru' is for only
+	 ;; avoiding byte-compile warning).
+	 (keywords '(:strike-through :strikethru))
 	 ignores files file directories dir form elem make-backup-files)
     (save-excursion
       (set-buffer buffer)
